Tutorial: Fix Part II hints and gesture diagrams on mobile.

--- a/src/App.css
+++ b/src/App.css
@@ -1404,6 +1404,11 @@ code {
   left: 0;
   right: 0;
   background-color: rgba(255,255,255,0.8);
+  padding-bottom: 50px;
+}
+
+.dark .tutorial-trace-gesture {
+  background-color: rgba(0,0,0,0.8);
 }
 
 .tutorial li {
